tests/models/struct/named/f64/fail/min_items.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/struct/named/f64/fail/min_items.rs:5:5
  |
5 |     value: f64,
  |     ^^^^^
